# GoalFlow

./: run_goalflow.bat
backend/: .env  config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/app/: alembic.ini  config.py  database.py  main.py  models.py  schemas.py  utils.py
backend/app/coreAI/: AI_schemas.py  generate_response.py
backend/app/coreAI/prompts/: ai_prompts.py
backend/app/db_migration/: env.py
backend/app/db_migration/versions/: 10d367dddbe8_add_the_messages_table.py  3cc7d00502c2_add_goals_table.py  47384bffbc0a_create_chats_table.py
backend/app/routers/: chat.py  goal.py  user.py
